removed deprecated call to Thread.currentThread.getId